--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Vue and Node-Webkit starter project.",
   "author": "https://github.com/nicklaw5",
   "scripts": {
-    "start-w": "webpack-dev-server --inline --hot",
-    "start-d": "webpack && nodewebkit .",
+    "start-web": "webpack-dev-server --inline --hot",
+    "start-desktop": "webpack && ./node_modules/nw/bin/nw .",
     "build": "webpack --progress --hide-modules",
-    "build-w": "webpack --watch --progress --hide-modules"
+    "build-watch": "webpack --watch --progress --hide-modules"
   },
   "window": {
     "title": "Vue Node Webkit",
@@ -27,10 +27,10 @@
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "cross-env": "^1.0.6",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.4",
+    "nw": "^0.13.0",
     "url-loader": "^0.5.7",
     "vue": "^1.0.20",
     "vue-hot-reload-api": "^1.2.0",
