--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Vue and Node-Webkit starter project.",
   "author": "https://github.com/nicklaw5",
   "scripts": {
-    "start-web": "webpack-dev-server --inline --hot",
-    "start-desktop": "node_modules/.bin/nw .",
+    "w-app": "webpack-dev-server --inline --hot",
+    "d-app": "webpack --progress --hide-modules && nw .",
     "build": "webpack --progress --hide-modules",
     "build-watch": "webpack --watch --progress --hide-modules"
   },
@@ -22,14 +22,13 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
-    "babel-runtime": "^5.8.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
+    "babel-runtime": "^5.8.0",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.4",
-    "nw": "^0.13.0",
     "url-loader": "^0.5.7",
     "vue": "^1.0.20",
     "vue-hot-reload-api": "^1.2.0",
